--- a/ttt.html
+++ b/ttt.html
@@ -3,16 +3,51 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="tt.css" />
-    <title>Document</title>
+    <title>Image with SVG Path Mask</title>
+    <style>
+      .image-container {
+        width: 300px;
+        height: 300px;
+        display: inline-block;
+        position: relative;
+      }
+
+      .image-container img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        mask: url(#mask-path); /* Apply the SVG mask */
+        -webkit-mask: url(#mask-path); /* Safari support */
+      }
+
+      /* Optional: adding a background color to demonstrate the shape */
+      .image-container::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.3); /* Semi-transparent */
+        mask: url(#mask-path);
+        -webkit-mask: url(#mask-path);
+      }
+    </style>
   </head>
   <body>
-    <div class="camera-zoom-container">
-      <img
-        src="/public/palmyra.jpg"
-        alt="Example Image"
-        class="camera-zoom-image"
-      />
+    <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
+      <defs>
+        <!-- Define the mask using an SVG path -->
+        <mask id="mask-path" x="0" y="0" width="100%" height="100%">
+          <path
+            d="M10,10 H90 A10,10 0 0,1 110,30 V70 A10,10 0 0,1 90,90 H10 A10,10 0 0,1 0,70 V30 A10,10 0 0,1 10,10 Z"
+          />
+        </mask>
+      </defs>
+    </svg>
+
+    <div class="image-container">
+      <img src="/public/palmyra.jpg" alt="Image" />
     </div>
   </body>
 </html>
